--- a/index.html
+++ b/index.html
@@ -6,62 +6,85 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>:: Carrot :: Diseño &amp; Impresión ::</title>
+        <meta name="description" content="Carrot Diseño &amp; impresión">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="css/main.css">        
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
         <header>
-            <img src="../carrot/logocarrot.png">
-            <nav>
+            <img id="logo" src="img/logocarrot.png" alt="Carrot Diseño e Impresión"><h1>Carrot</h1>
+            <nav class="main-nav">
                 <ul>
-                <li><a href="inicio.html">INICIO</li>
-                <li><a href="sobrecarrot.html">Sobre Carrot</li>
-                <li><a href="diseno.html">Diseño &amp; Impresión</li>
-                <li><a href="estampados.html">Estampados</li>
-                <li><a href="carteleria.html">Cartelería</li>
-                <li><a href="promocionales.html">Artículos Promocionales</li>
+                    <li>
+                        <a href="inicio.html">Inicio</a>
+                    <li>
+                        <a href="sobrecarrot.html">Sobre Carrot</a>
+                    </li>
+                    <li>
+                        <a href="diseno.html">Diseño &amp; Impresión</a>
+                    </li>
+                    <li>
+                        <a href="estampados.html">Estampados</a>
+                    </li>
+                    <li>
+                        <a href="carteleria.html">Cartelería</a>
+                    </li>
+                    <li class="last">
+                        <a  href="promocionales.html">Artículos Promocionales
+                        </a>
+                    </li>
                 </ul>
             </nav>  
         </header>
         <section>
-             <ul>
-                 <li><a href="disenio.html"> 
-                 <img alt="disenio" src="img/disenio.png">
-                 </a></li>
-                 <li><a href="impresion.html"> 
-                 <img alt="impresion" src="img/impresion.png">
-                 </a></li>
-                 <li> <a href="estampados.html"> 
-                 <img alt="estampados" src="img/estampados.png">
-                 </a></li>
-                 </a>
-                 <li> <a href="carteleria.html"> 
-                 <img alt="carteleria" src="img/carteleria.png">
-                 </a></li>
-             </ul>
+            <div class="wrapper">
+                 <ul>
+                     <li>
+                        <a href="disenio.html"> 
+                        <img alt="disenio" src="img/disenio.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="impresion.html"> 
+                        <img alt="impresion" src="img/impresion.png">
+                        </a>
+                    </li>
+                    <li> 
+                        <a href="estampados.html"> 
+                        <img alt="estampados" src="img/estampados.png">
+                        </a>
+                    </li>
+                    <li> 
+                        <a href="carteleria.html"> 
+                        <img alt="carteleria" src="img/carteleria.png">
+                        </a>
+                    </li>
+                 </ul>
+                <div class="img-side"><img alt="impresiones" src="img/principal.png"></div>
+            </div>
         </section>
-        <img alt="impresiones" src="img/principal.png">
-        <ul>
-            <li><a href="contacto.html">CONTACTO</li>
-        </ul>
-        
-            <a href="https://twitter.com/jorgecarrot"> 
-            <img alt="twitter" src="img/twitter.png">
-            </a>
-            <a href="https://www.facebook.com/pages/Carrot/512839382157187"> 
-            <img alt="facebook" src="img/facebook.png">
-            </a>
+      <footer>
+            <a class="contact" href="contacto.html">Contacto</a>
+            <ul class="networks">
+                <li>
+                    <a class="facebook" href="https://www.facebook.com/pages/Carrot/512839382157187" target="_blank">
+                        <span>Facebook</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a class="twitter" href="https://twitter.com/jorgecarrot" target="_blank">
+                        <span>Twitter</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a class="e-mail" href="mailto:jorgecarro88@gmail.com" target="_blank">
+                        <span>E-mail</span>
+                    </a>
+                </li>
+            </ul>
+        </footer>    
     </body>
 </html>
