--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>:: Carrot :: Diseño &amp; Impresión ::</title>
+        <title>Carrot Diseño &amp; Impresión</title>
         <meta name="description" content="Carrot Diseño &amp; impresión">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">        
+        <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
+        <link rel="icon" type="image/png" href="img/icon.png">        
     </head>
     <body>
         <header>
-            <img id="logo" src="img/logocarrot.png" alt="Carrot Diseño e Impresión"><h1>Carrot</h1>
+            <a href="index.html" title="Inicio">
+                <img id="logo" src="img/logocarrot.png" alt="Carrot Diseño e Impresión">
+                <h1>Carrot</h1>
+            </a>    
             <nav class="main-nav">
                 <ul>
-                    <li>
-                        <a href="inicio.html">Inicio</a>
                     <li>
                         <a href="sobrecarrot.html">Sobre Carrot</a>
                     </li>
@@ -31,7 +32,7 @@
                         <a href="carteleria.html">Cartelería</a>
                     </li>
                     <li class="last">
-                        <a  href="promocionales.html">Artículos Promocionales
+                        <a  href="articulos.html">Artículos Promocionales
                         </a>
                     </li>
                 </ul>
@@ -39,9 +40,9 @@
         </header>
         <section>
             <div class="wrapper">
-                 <ul>
+                 <ul class="menu">
                      <li>
-                        <a href="disenio.html"> 
+                        <a href="impresion.html"> 
                         <img alt="disenio" src="img/disenio.png">
                         </a>
                     </li>
@@ -69,19 +70,19 @@
             <ul class="networks">
                 <li>
                     <a class="facebook" href="https://www.facebook.com/pages/Carrot/512839382157187" target="_blank">
-                        <span>Facebook</span>
+                    <span>Facebook</span>
                     </a>
                 </li>
 
                 <li>
                     <a class="twitter" href="https://twitter.com/jorgecarrot" target="_blank">
-                        <span>Twitter</span>
+                    <span>Twitter</span>
                     </a>
                 </li>
 
                 <li>
                     <a class="e-mail" href="mailto:jorgecarro88@gmail.com" target="_blank">
-                        <span>E-mail</span>
+                    <span>E-mail</span>
                     </a>
                 </li>
             </ul>
