--- a/articulos.html
+++ b/articulos.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Carrot Diseño &amp; Impresión</title>
+        <meta name="description" content="Carrot Diseño &amp; impresión">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
+        <link rel="icon" type="image/png" href="img/icon.png">            
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
         <header>
-            <img src="../carrot/logocarrot.png">
-            <nav>
+            <a href="index.html" title="Inicio">
+                <img id="logo" src="img/logocarrot.png" alt="Carrot Diseño e Impresión">
+                <h1>Carrot</h1>
+            </a>    
+            <nav class="main-nav">
                 <ul>
-                <li><a href="inicio.html">INICIO</li></a>
-                <li><a href="sobrecarrot.html">Sobre Carrot</li></a>
-                <li><a href="diseno.html">Diseño & Impresión</li></a>
-                <li><a href="estampados.html">Estampados</li></a>
-                <li><a href="carteleria.html">Cartelería</li></a>
-                <li><a href="articulos.html">Artículos Promocionales</li></a>
+                    <li>
+                        <a href="sobrecarrot.html">Sobre Carrot</a>
+                    </li>
+                    <li>
+                        <a href="diseno.html">Diseño &amp; Impresión</a>
+                    </li>
+                    <li>
+                        <a href="estampados.html">Estampados</a>
+                    </li>
+                    <li>
+                        <a href="carteleria.html">Cartelería</a>
+                    </li>
+                    <li class="last">
+                        <a  href="articulos.html">Artículos Promocionales
+                        </a>
+                    </li>
                 </ul>
             </nav>  
         </header>
-        <section>       
-             <img alt="estampados" src="img/tazas.jpg">
-             <h1>ARTICULOS PROMOCIONALES</h1>
-             <ul>
-                <li>Tarjetas Personales</li>
-                <li>Tazas</li>
-                <li>Volantes y folletos</li>
-                <li>Imanes publicitarios</li>
-                <li>Mousepads y puzzles</li>
-                <li>Azulejos y platos sublimados</li>
-                <li>Libretas personalizadas</li> 
-                <li>Identificadores empresariales</li>
-                <P>y mucho más...</P>
-             </ul>  
+        <section class="wrapper">
+            <img class="img-nav" src="img/tazas2.jpg" alt="Carrot">
+            <div class="mini-wrapper">
+                <h2>Articulos promocionales</h2>
+                <ul> 
+                    <li>Tarjetas personales</li>
+                    <li>Tazas</li>
+                    <li>Volantes y folletos</li>
+                    <li>Imanes publicitarios</li>
+                    <li>Mousepads y puzzles</li>
+                    <li>Azulejos y platos sublimados</li>
+                    <li>Libretas personalizadas</li>
+                    <li>Identificadores empresariales
+                    y mucho más.</li>
+                </ul>
+            </div>
         </section>
-        
-        <ul>
-            <li><a href="contacto.html">CONTACTO</li></a>
-        </ul>
-        
-            <a href="https://twitter.com/jorgecarrot"> 
-            <img alt="twitter" src="img/twitter.png">
-            </a>
-            <a href="https://www.facebook.com/pages/Carrot/512839382157187"> 
-            <img alt="facebook" src="img/facebook.png">
-            </a>
+      <footer>
+            <a class="contact" href="contacto.html">Contacto</a>
+            <ul class="networks">
+                <li>
+                    <a class="facebook" href="https://www.facebook.com/pages/Carrot/512839382157187" target="_blank">
+                    <span>Facebook</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a class="twitter" href="https://twitter.com/jorgecarrot" target="_blank">
+                    <span>Twitter</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a class="e-mail" href="mailto:jorgecarro88@gmail.com" target="_blank">
+                    <span>E-mail</span>
+                    </a>
+                </li>
+            </ul>
+        </footer>    
     </body>
 </html>
