improving for validation

--- a/articulos.html
+++ b/articulos.html
@@ -39,7 +39,7 @@
             </nav>  
         </header>
         <section class="wrapper">
-            <img class="img-nav" src="img/tazas2.jpg" alt="Carrot">
+            <img class="img-nav" src="img/tazas.jpg" alt="Carrot">
             <div class="mini-wrapper">
                 <h2>Articulos promocionales</h2>
                 <ul> 
