--- a/contacto.html
+++ b/contacto.html
@@ -40,11 +40,12 @@
         <section class="wrapper">
             <div class="contact">
                 <h2>Contacto</h2>
-                <ul>
-                    <li>Jorge Carro</li>
+                   <ul>
                     <li>Alberto Méndez 173 - Colonia del Sacramento, Uruguay</li>
                     <li>Tel: +598 4523 4494 - 099 09 33 60</li>
+                    <li><a href="mailto:jorgecarro88@gmail.com">jorgecarro88@gmail.com</li>
                 </ul>
+                <div id="map"></div>
             </div>
         </section>
       <footer>
@@ -68,6 +69,9 @@
                     </a>
                 </li>
             </ul>
-        </footer>    
+        </footer>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false" type="text/javascript"></script>
+        <script src="js/javascript.js" type="text/javascript"></script>
     </body>
 </html>
