add media queries

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="sobrecarrot.html">Sobre Carrot</a>
                     </li>
                     <li>
-                        <a href="diseno.html">Diseño &amp; Impresión</a>
+                        <a href="impresion.html">Diseño &amp; Impresión</a>
                     </li>
                     <li>
                         <a href="estampados.html">Estampados</a>
