--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Scada' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Metrophobic' rel='stylesheet' type='text/css'>
-        <link rel="icon" type="image/png" href="img/icon.png">        
+        <link rel="icon" type="image/png" href="img/icon.png">
+        <!-- Nivo Slider -->
+        <link rel="stylesheet" href="css/nivo_slider/nivo-slider.css" type="text/css">
+        <link rel="stylesheet" href="css/nivo_slider/themes/default/default.css" type="text/css">        
     </head>
     <body>
         <header>
@@ -40,29 +43,14 @@
         </header>
         <section>
             <div class="wrapper">
-                 <ul class="menu">
-                     <li>
-                        <a href="impresion.html"> 
-                        <img alt="disenio" src="img/disenio.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="impresion.html"> 
-                        <img alt="impresion" src="img/impresion.png">
-                        </a>
-                    </li>
-                    <li> 
-                        <a href="estampados.html"> 
-                        <img alt="estampados" src="img/estampados.png">
-                        </a>
-                    </li>
-                    <li> 
-                        <a href="carteleria.html"> 
-                        <img alt="carteleria" src="img/carteleria.png">
-                        </a>
-                    </li>
-                 </ul>
-                <div class="img-side"><img alt="impresiones" src="img/principal.png"></div>
+                <div class="slider-wrapper theme-default">
+                    <div class="ribbon"></div>
+                    <div id="slider" class="nivoSlider">
+                        <img src="img/gallery/slide1.jpg" alt="Logo Carrot principal">
+                        <img src="img/gallery/slide2.jpg" alt="" title="">
+                        <img src="img/gallery/slide3.jpg" alt="" title="">
+                    </div>
+                </div>
             </div>
         </section>
       <footer>
@@ -73,19 +61,17 @@
                     <span>Facebook</span>
                     </a>
                 </li>
-
-                <li>
-                    <a class="twitter" href="https://twitter.com/jorgecarrot" target="_blank">
-                    <span>Twitter</span>
-                    </a>
-                </li>
-
                 <li>
                     <a class="e-mail" href="mailto:jorgecarro88@gmail.com" target="_blank">
                     <span>E-mail</span>
                     </a>
                 </li>
             </ul>
-        </footer>    
+        </footer>
+        <!-- scripts -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false" type="text/javascript"></script>
+        <script src="js/jquery.nivo.slider.pack.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
