update cartelería text

--- a/carteleria.html
+++ b/carteleria.html
@@ -41,13 +41,16 @@
             <img class="img-nav" src="img/carteleria.jpg" alt="Carrot">
             <div class="mini-wrapper-down">
                 <h2>Carteleria</h2>
-                <p>Trabajamos con diferentes tipos de soportes para cartelería comercial.</p>
+                <p>Para exteriores como para interiores</p>
+                <p>Señalética y ploteo vehícular</p>
+                <p>Trabajamos en:</p>
                 <ul>
-                    <li>Vinilos</li>
-                    <li>Chapas</li>
-                    <li>Sublimado en acrílico</li>
+                    <li>PVC expandido</li>
+                    <li>Acrílico</li>
+                    <li>Vinilo impreso y de corte</li>
+                    <li>Lona</li>
+                    <li>Letras corpóreas</li>
                 </ul>
-                <p>Lo que nos permite hacer tiradas cortas y en 24 hs.</p>
             </div>
         </section>
         <footer>
